@@ -24,6 +24,7 @@ Bug fixes:
 	* Properly show the initial value of the property "visible" for the reference range (Issue #582)
 	* React of Delete and Backspace keys to delete selected cells in spreadsheet columns (Issue #596)
 	* Update the plot legend on column name changes used in box and bar plots (Issue #597)
+	* Fixed the positioning of values labels for horizontal bar plots (Issue #599)
 
 -----2.10.0 (21.03.2023) -----
 New features:
